update to wq 0.7.0 & python 3

--- a/templates/datarequest_columns.html
+++ b/templates/datarequest_columns.html
@@ -44,7 +44,7 @@
         <button type="submit">Update Columns</button>
         </form>
 
-        <form action="/datarequests/{{id}}/auto" method="post">
+        <form action="/datarequests/{{id}}/auto" method="post" data-json="false">
           {{>csrf}}
           <button type="submit">Continue</button>
         </form>
