--- a/templates/datarequest_list.html
+++ b/templates/datarequest_list.html
@@ -6,7 +6,7 @@
       <div data-role="header">
         <a href="/" data-icon="home" data-iconpos="notext">Home</a>
         <h3>Data Requests</h3>
-        <a href="/webservices" data-icon="add" data-iconpos="right" class="login-shown">New Request</a>
+        <a href="/webservices" data-icon="plus" data-iconpos="right" class="login-shown">New Request</a>
       </div>
       <div data-role="header">
         <div data-role="navbar">
