--- a/templates/project_detail.html
+++ b/templates/project_detail.html
@@ -11,7 +11,7 @@
       </div>
       <div data-role="content">
         <ul data-role="listview" data-inset="true" class="layer-list">
-          <li data-role="list-divider" data-theme="c">Included Data</li>
+          <li data-role="list-divider">Included Data</li>
           {{reset_color}}
           {{#relationships}}
           <li data-item_id="{{item_id}}" data-item_label="{{item_label}}">
