--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -6,7 +6,7 @@
       <div data-role="header">
         <a href="/" data-icon="home" data-iconpos="notext">Home</a>
         <h3>Project Folders</h3>
-        <a href="/projects/new" data-icon="add" data-iconpos="right" class="login-shown">New Project Folder</a>
+        <a href="/projects/new" data-icon="plus" data-iconpos="right" class="login-shown">New Project Folder</a>
       </div>
       <div data-role="header">
         <div data-role="navbar">
