--- a/templates/datarequest_columns.html
+++ b/templates/datarequest_columns.html
@@ -6,7 +6,7 @@
   <body{{>login_class}}>
     <div data-role="page" data-url="/datarequests/{{id}}/columns">
       <div data-role="header">
-        <a href="/" data-icon="home" data-iconpos="notext">Home</a>
+        {{>home}}
         <h3>{{webservice_label}}</h3>
       </div>
       <div data-role="content">
