--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -4,3 +4,5 @@
     var require = {"paths": {"climata_viewer": "climata_viewer.js?v={{version}}"}};
 </script>
 <script src="/js/lib/require.js" data-main="/js/climata_viewer"></script>
+{{>loadcss}}
+<script defer>loadCSS('http://fonts.googleapis.com/css?family=Raleway');</script>
