--- a/app/css/climata_viewer.css
+++ b/app/css/climata_viewer.css
@@ -1,4 +1,6 @@
-@import url("lib/jquery.mobile.css");
+@import url("themes.css");
+@import url("lib/jquery.mobile.structure.css");
+@import url("lib/jquery.mobile.icons.css");
 @import url("lib/highlight.css");
 @import url("lib/leaflet.css");
 @import url("climata_viewer/base.css");
