--- a/templates/datarequest_auto.html
+++ b/templates/datarequest_auto.html
@@ -6,7 +6,7 @@
   <body{{>login_class}}>
     <div data-role="page">
       <div data-role="header">
-        <a href="/" data-icon="home" data-iconpos="notext">Home</a>
+        {{>home}}
         <h3>{{webservice_label}}</h3>
       </div>
       <div data-role="content">
@@ -17,17 +17,12 @@
         <p class="message"></p>
         <div style="display:none" class="complete">
           {{>download}}
-          <p>
-            Display result publicly on home page?
-            <br>
-            {{>toggle}}
-          </p>
           {{>links}}
         </div>
         <div style="display:none" class="retry">
           <form action="/datarequests/{{id}}/auto" method="post" data-json="false">
             {{>csrf}}
-            <button type="submit">Try Again</button>
+            <button type="submit" data-theme="b">Try Again</button>
             {{>links}}
           </form>
         </div>
