--- a/templates/datarequest_detail.html
+++ b/templates/datarequest_detail.html
@@ -6,19 +6,26 @@
   <body{{>login_class}}>
     <div data-role="page">
       <div data-role="header">
-        <a href="/" data-icon="home" data-iconpos="notext">Home</a>
+        {{>home}}
         <h3>{{webservice_label}}</h3>
       </div>
       <div data-role="content">
-        <div class="ui-grid-a ui-responsive">
+        <div class="ui-grid-a responsive-grid">
         <div class="ui-block-a">
-        <table>
-          <tr><th>Web Service</th><td>{{webservice_label}}</td></tr>
+        <table class="info">
+          <tr><th>Web Service</th><td><a href="/webservices/{{webservice_id}}">{{webservice_label}}</a></td></tr>
           <tr><th>Data Range</th><td>{{start_date}} to {{end_date}}</td></tr>
           {{#inverserelationships}}
           <tr>
             <th>{{type_label}}</th>
-            <td>{{item_label}}</td>
+            <td>
+              {{#is_project}}
+              <a href="/{{item_url}}" data-direction="reverse">{{item_label}}</a>
+              {{/is_project}}
+              {{^is_project}}
+              {{item_label}}
+              {{/is_project}}
+            </td>
           </tr>
           {{/inverserelationships}}
         </table>
@@ -28,22 +35,24 @@
         {{#completed}}
         {{>download}}
         {{/completed}}
-        {{#is_mine}}
+        {{#mine}}
         <form action="/datarequests/{{id}}/auto" method="post" data-json="false">
           {{>csrf}}
           <button type="submit"{{^completed}} data-theme="b"{{/completed}}>
-            {{#completed}}Re-{{/completed}}Load Data
+            {{#completed}}Re-{{/completed}}Submit Request to Webservice
           </button>
         </form>
         {{>del}}
-        {{/is_mine}}
+        {{/mine}}
         </div>
         {{/is_authenticated}}
 
         {{#completed}}
         </div>
         <div class="ui-block-b">
-          <div id="datarequest-{{id}}-map" class="map"></div>
+          <div class="ui-content">
+            <div id="datarequest-{{id}}-map" class="map"></div>
+          </div>
         {{/completed}}
         </div>
         </div>
@@ -54,19 +63,28 @@
         {{/completed}}
 
         <hr>
-        <table>
+        <div class="ui-grid-a responsive-grid">
+        <div class="ui-block-a">
+        <div data-role="collapsible">
+          <h3>Python Code Example</h3>
+          <pre><code class="python">{{as_python}}</code></pre>
+        </div>
+        </div>
+        <div class="ui-block-b">
+        <div data-role="collapsible">
+          <h3>Request Details</h3>
+        <table class="info">
           <tr><th>Requested On</th><td>{{requested_label}}</td></tr>
           <tr><th>Requested By</th><td>{{user_label}}</td></tr>
           {{#completed}}
           <tr><th>Completed On</th><td>{{completed_label}}</td></tr>
-          {{#is_mine}}
+          {{#mine}}
           <tr class="login-shown"><th>Public</th><td>{{>toggle}}</td></tr>
-          {{/is_mine}}
+          {{/mine}}
           {{/completed}}
         </table>
-        <div data-role="collapsible">
-          <h3>Python Code Example</h3>
-          <pre><code class="python">{{as_python}}</code></pre>
+        </div>
+        </div>
         </div>
       </div>
     </div>
