--- a/templates/datarequest_edit.html
+++ b/templates/datarequest_edit.html
@@ -7,7 +7,7 @@
   <body{{>login_class}}>
     <div data-role="page">
       <div data-role="header">
-        <a href="/" data-icon="home" data-iconpos="notext">Home</a>
+        {{>home}}
         <h3>Request {{#webservice}}{{label}}{{/webservice}} Data</h3>
       </div>
       <div data-role="content">
@@ -72,6 +72,12 @@
 
               <p class="error datarequest-inverserelationship-{{type_id}}-errors"></p>
             </li>
+            {{#is_project}}{{^current_project}}
+            <li data-role="fieldcontain" class="new-project">
+              <label for="project-name">Project Name</label>
+              <input name="project-name" id="project-name" required placeholder="Enter a name for the new project">
+            </li>
+            {{/current_project}}{{/is_project}}
             {{/inverserelationships}}
             {{^opts.start_date.ignored}}
             <li data-role="fieldcontain">
@@ -92,7 +98,7 @@
             </li>
             {{/opts.end_date.ignored}}
             <li data-role="fieldcontain">
-              <button type="submit">Save</button>
+              <button type="submit" data-theme="b">Save Filters</button>
               <p class="error datarequest-errors"></p>
             </li>
           </ul>
