--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
   <body{{>login_class}}>
     <div data-role="page" class="ui-page">
       <div data-role="header">
-        <a href="/" data-icon="home" data-iconpos="notext">Home</a>
+        {{>home}}
         <h1>Log In</h1>
       </div>
       <div data-role="content">
