--- a/templates/project_edit.html
+++ b/templates/project_edit.html
@@ -7,16 +7,17 @@
   <body{{>login_class}}>
     <div data-role="page">
       <div data-role="header">
-        <a href="/" data-icon="home" data-iconpos="notext">Home</a>
+        {{>home}}
         <h3>Create Project</h3>
       </div>
       <div data-role="content">
         <form action="/projects/" method="post" data-ajax="false">
           {{>csrf}}
           <ul data-role="listview">
+            <li>Enter a short name for your project.</li>
             {{>identifiers}}
             <li data-role="fieldcontain">
-              <button type="submit">Save</button>
+              <button data-theme="b" type="submit">Save</button>
               <p class="error datarequest-errors"></p>
             </li>
           </ul>
