--- a/templates/webservice_list.html
+++ b/templates/webservice_list.html
@@ -4,18 +4,30 @@
   <body{{>login_class}}>
     <div data-role="page">
       <div data-role="header">
-        <a href="/" data-icon="home" data-iconpos="notext">Home</a>
-        <h3>Data Requests</h3>
+        {{>home}}
+        <h3>Supported Webservices</li>
       </div>
       <div data-role="content">
+        {{#current_project}}
+        <p>
+          Select a webservice below to add data to the
+          <a href="/projects/{{id}}" data-direction="reverse">{{label}}</a>
+          project.
+        </p>
+        <br>
+        {{/current_project}}
         <ul data-role="listview">
           {{#list}}
-          <li data-icon="add" data-iconpos="right">
-            <a href="/datarequests/new?webservice_id={{id}}">
+          <li>
+            <a href="/webservices/{{id}}">
               <h3>{{label}}</h3>
               <p>{{authority_label}}</p>
             </a>
-            <a href="/webservices/{{id}}" data-icon="info">More Info</a>
+            {{#is_authenticated}}
+            <a class="login-shown" data-icon="plus" data-theme="b" href="/datarequests/new?webservice_id={{id}}">
+              Add Data
+            </a>
+            {{/is_authenticated}}
           </li>
           {{/list}}
         </ul>
