--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,13 @@
 <html manifest="climata_viewer.appcache">
   <head>
     <title>Climata Viewer</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-icon" href="/images/icon-60.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/icon-180.png">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="/images/icon-192.png">
     {{>head}}
   </head>
   <body{{>login_class}}>
