--- a/templates/webservice_detail.html
+++ b/templates/webservice_detail.html
@@ -10,7 +10,10 @@
         <h3>{{label}}</h3>
       </div>
       <div data-role="content">
-        <p>{{description}}</p>
+        <table class="info">
+          <tr><td><h3>Overview</h3></td></tr>
+          <tr><td>{{description}}</td></tr>
+        </table>
         <table class="info">
           <tr><td colspan=2><h3>Web Service</h3></td></tr>
           <tr>
